refactor: suffix transfer DTOs and JPA entities with bean naming rule
